Cleaning before release
- Improve generic text file import
- Improve file import on empty list
- Disable export on empty list
- Fix file chooser duplicated callback
- Fix i18n status displayed on switch
- Increase ITs retry on strategy Time
- Fix sonar issues
- Bump dependencies version